@@ -512,11 +512,13 @@ saving, and manually checking to make sure the combat stats are as desired.
 BEHAVIOR_COMMONSPEAKER=\
 Behavior   : CommonSpeaker\n\r\
 Targets    : MOBs\n\r\
-Parameters : \n\r\
+Parameters : ([LANGUAGEID])\n\r\
 Example    : \n\r\
+Example    : Orcish\n\r\
 Description: \n\r\
-This behavior makes sure that a mob is always speaking Common, even if it should \
-be a race other than Human, or it should be polymorphed.
+Without parameters, this behavior makes sure that a mob is always speaking Common, \
+even if it should be a race other than Human, or it should be polymorphed.  Another \
+language may also optionally be specified.
 
 BEHAVIOR_FIGHTFLEE=\
 Behavior   : FightFlee\n\r\
