@@ -39,6 +39,7 @@
   37. Universal Starting Items can now be distinguished by race.
   38. New GenExit/GenPortal tags, and new NOWEAR flag for items in MUDPercolator
   39. Some of the one-off Racial Categories have been consolidated.
+  40. CommonSpeaker behavior now allows a language argument.
 # Build 5.9.4 Released 08/03/2016
    1. Qualify now shows language limits
    2. New Prop_NoTeleport exceptions
